--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ header {
     left: 0;
     z-index: 1000;
     width: 30rem;
-    height: 41.6rem;
+    height: 41.7rem;
     background-color: rgba(4, 24, 83, 0.782);
     display: flex;
     justify-content: center;
@@ -347,7 +347,7 @@ footer p {
 }
 
 footer img {
-    width: 5rem;
+    width: 6rem;
 }
 
 .foot {
@@ -358,12 +358,15 @@ footer img {
 
 .foot i {
     width: 2rem;
-    font-size: 24px;
+    font-size: 26px;
     margin: 0 5px;
     color: #fff;
-    cursor: pointer;
-
+    cursor: pointer;    
 }
+.foot i:hover{
+    transform: scale(1.5);
+}
+
 
 
 
