--- a/styles.css
+++ b/styles.css
@@ -178,6 +178,11 @@ section {
     align-items: center;
     justify-content: center;
 }
+.about .row .btn{
+    margin-left: 16rem;
+    margin-top: 3rem;
+    
+}
 
 .btn {
     font-size: 1rem;
