--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ header {
     left: 0;
     z-index: 1000;
     width: 30rem;
-    height: 91%;
+    height: 100%;
     background-color: rgba(4, 24, 83, 0.782);
     display: flex;
     justify-content: center;
@@ -343,8 +343,8 @@ footer {
     font-size: 14px;
     position: fixed;
     bottom: 0;
-    left: 0;
-    width: 100%;
+    right: 0;
+    width: 68.5%;
 }
 
 footer p {
