--- a/styles.css
+++ b/styles.css
@@ -250,10 +250,10 @@ section {
 }
 
 .portfolio .box-container .box {
-    height: 20rem;
-    width: 25rem;
+    height: 12rem;
+    width: 18rem;
     border-radius: 1rem;
-    margin: 2rem;
+    margin: 1rem;
     overflow: hidden;
     cursor: pointer;
 }
@@ -354,13 +354,19 @@ footer img {
     align-items: center;
     justify-content: center;
 }
+.foot p{
+    color: orange;
+    font-size: 2rem;
+    margin-left: 25rem;
+}
 
 .foot i {
-    width: 2rem;
-    font-size: 26px;
-    margin: 0 5px;
+    width: 3rem;
+    font-size: 38px;
+    margin: 0 8px;
     color: #fff;
-    cursor: pointer;    
+    cursor: pointer;
+    padding-left: 1rem;       
 }
 
 .foot i:hover{
