--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,7 @@ header .name {
     color: #ffffffde;
     font-weight: bold;
     text-align: center;
-    
+
 }
 
 header .navbar {
@@ -115,7 +115,7 @@ section {
 }
 
 .home h3 {
-    font-size: 2rem;
+    font-size: 2.5rem;
     color: whitesmoke;
 }
 
@@ -132,6 +132,8 @@ section {
     font-size: 30px;
     color: whitesmoke;
     padding: 0.5rem 0;
+    text-align: center;
+    justify-content: center;
 }
 
 .btn {
@@ -178,10 +180,15 @@ section {
     align-items: center;
     justify-content: center;
 }
-.about .row .btn{
+
+.about .row .btn {
     margin-left: 16rem;
     margin-top: 3rem;
-    
+
+}
+
+.about h1 {
+    color: orange;
 }
 
 .btn {
@@ -198,6 +205,10 @@ section {
     justify-content: space-between;
     padding: 1rem 0;
     padding-left: 3rem;
+}
+
+.education h1 {
+    color: orange;
 }
 
 .education .box-container .box {
@@ -241,6 +252,10 @@ section {
     background: orange;
 }
 
+.portfolio h1 {
+    color: orange;
+}
+
 .portfolio .box-container {
     display: flex;
     flex-wrap: wrap;
@@ -279,6 +294,10 @@ section {
     flex: 1 1 10rem;
     padding: 4rem;
     padding-bottom: 0;
+}
+
+.contact h1 {
+    color: orange;
 }
 
 .contact h3 {
@@ -354,7 +373,8 @@ footer img {
     align-items: center;
     justify-content: center;
 }
-.foot p{
+
+.foot p {
     color: orange;
     font-size: 2rem;
     margin-left: 25rem;
@@ -366,10 +386,10 @@ footer img {
     margin: 0 8px;
     color: #fff;
     cursor: pointer;
-    padding-left: 1rem;       
+    padding-left: 1rem;
 }
 
-.foot i:hover{
+.foot i:hover {
     transform: scale(1.5);
 }
 
